@@ -43,7 +43,7 @@ else 							{ $_POST['oldname'] = $_POST['fieldName'];}
 <!-- footer -->
 <div class="pFooter">
 	<button class="btn btn-small hidePopups">Close</button>
-	<button class="btn btn-small <?php if($_POST['action']=="delete") print "btn-danger" ?>" id="editcustomSubmit"><i class="icon-gray <?php if($_POST['action']=="delete") print "icon-white" ?> icon-ok"></i> <?php print ucwords($_POST['action']); ?> field</button>
+	<button class="btn btn-small <?php if($_POST['action']=="delete") { print "btn-danger"; } else { print "btn-success";} ?>" id="editcustomSubmit"><i class="icon-white <?php if($_POST['action']=="add") { print "icon-plus"; } else if ($_POST['action']=="delete") { print "icon-trash"; } else { print "icon-ok"; } ?>"></i> <?php print ucwords($_POST['action']); ?> field</button>
 
 	<!-- result -->
 	<div class="customIPEditResult"></div>
