@@ -7,8 +7,10 @@
 /* required functions */
 require_once('../../functions/functions.php'); 
 
-/* verify that user is admin */
-if (!checkAdmin()) die('');
+/* verify that user has write permissions for subnet */
+$subnetPerm = checkSubnetPermission ($_REQUEST['subnetId']);
+if($subnetPerm != "2") 	{ die('<div class="alert alert-error">You do not have permissions to resize subnet!</div>'); }
+
 
 /* verify post */
 CheckReferrer();
